# graphite-backend

./: Cargo.toml  LICENSE.txt  README.md  docker-compose.yml
certs/: graphite.test+3-key.pem  graphite.test+3.pem
migrations/: 0001_setup.sql
src/: api.rs  config.rs  error.rs  github.rs  lib.rs  main.rs  server.rs
src/auth/: handlers.rs  mod.rs  model.rs  repo.rs  service.rs  session.rs
src/projects/: handlers.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
