[package]
name = "graphite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.28"

axum = { version = "0.6.18", features = ["tracing"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"

hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}

tower = {version = "0.4.13" }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }

serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.104"

thiserror = "1.0.44"
anyhow = "1.0.71"

toml = "0.7.6"
clap = { version = "4.3.19", features = ["derive"] }

uuid = {version = "1.4.1", features = ["v4"]}
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
